--- a/analysis/topic_models.ipynb
+++ b/analysis/topic_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,77 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ":: loading settings :: url = jar:file:/home/3147567/.conda/envs/reddit_env/lib/python3.9/site-packages/pyspark/jars/ivy-2.4.0.jar!/org/apache/ivy/core/settings/ivysettings.xml\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Ivy Default Cache set to: /home/3147567/.ivy2/cache\n",
-      "The jars for the packages stored in: /home/3147567/.ivy2/jars\n",
-      "com.johnsnowlabs.nlp#spark-nlp_2.12 added as a dependency\n",
-      ":: resolving dependencies :: org.apache.spark#spark-submit-parent-e0533480-37d1-4e96-bfc6-8f5500d97b13;1.0\n",
-      "\tconfs: [default]\n",
-      "\tfound com.johnsnowlabs.nlp#spark-nlp_2.12;4.1.0 in central\n",
-      "\tfound com.typesafe#config;1.4.2 in central\n",
-      "\tfound org.rocksdb#rocksdbjni;6.29.5 in central\n",
-      "\tfound com.amazonaws#aws-java-sdk-bundle;1.11.828 in central\n",
-      "\tfound com.github.universal-automata#liblevenshtein;3.0.0 in central\n",
-      "\tfound com.google.code.findbugs#annotations;3.0.1 in central\n",
-      "\tfound net.jcip#jcip-annotations;1.0 in central\n",
-      "\tfound com.google.code.findbugs#jsr305;3.0.1 in central\n",
-      "\tfound com.google.protobuf#protobuf-java-util;3.0.0-beta-3 in central\n",
-      "\tfound com.google.protobuf#protobuf-java;3.0.0-beta-3 in central\n",
-      "\tfound com.google.code.gson#gson;2.3 in central\n",
-      "\tfound it.unimi.dsi#fastutil;7.0.12 in central\n",
-      "\tfound org.projectlombok#lombok;1.16.8 in central\n",
-      "\tfound org.slf4j#slf4j-api;1.7.21 in central\n",
-      "\tfound com.navigamez#greex;1.0 in central\n",
-      "\tfound dk.brics.automaton#automaton;1.11-8 in central\n",
-      "\tfound com.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.3 in central\n",
-      ":: resolution report :: resolve 292ms :: artifacts dl 82ms\n",
-      "\t:: modules in use:\n",
-      "\tcom.amazonaws#aws-java-sdk-bundle;1.11.828 from central in [default]\n",
-      "\tcom.github.universal-automata#liblevenshtein;3.0.0 from central in [default]\n",
-      "\tcom.google.code.findbugs#annotations;3.0.1 from central in [default]\n",
-      "\tcom.google.code.findbugs#jsr305;3.0.1 from central in [default]\n",
-      "\tcom.google.code.gson#gson;2.3 from central in [default]\n",
-      "\tcom.google.protobuf#protobuf-java;3.0.0-beta-3 from central in [default]\n",
-      "\tcom.google.protobuf#protobuf-java-util;3.0.0-beta-3 from central in [default]\n",
-      "\tcom.johnsnowlabs.nlp#spark-nlp_2.12;4.1.0 from central in [default]\n",
-      "\tcom.johnsnowlabs.nlp#tensorflow-cpu_2.12;0.4.3 from central in [default]\n",
-      "\tcom.navigamez#greex;1.0 from central in [default]\n",
-      "\tcom.typesafe#config;1.4.2 from central in [default]\n",
-      "\tdk.brics.automaton#automaton;1.11-8 from central in [default]\n",
-      "\tit.unimi.dsi#fastutil;7.0.12 from central in [default]\n",
-      "\tnet.jcip#jcip-annotations;1.0 from central in [default]\n",
-      "\torg.projectlombok#lombok;1.16.8 from central in [default]\n",
-      "\torg.rocksdb#rocksdbjni;6.29.5 from central in [default]\n",
-      "\torg.slf4j#slf4j-api;1.7.21 from central in [default]\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|                  |            modules            ||   artifacts   |\n",
-      "\t|       conf       | number| search|dwnlded|evicted|| number|dwnlded|\n",
-      "\t---------------------------------------------------------------------\n",
-      "\t|      default     |   17  |   0   |   0   |   0   ||   17  |   0   |\n",
-      "\t---------------------------------------------------------------------\n",
-      ":: retrieving :: org.apache.spark#spark-submit-parent-e0533480-37d1-4e96-bfc6-8f5500d97b13\n",
-      "\tconfs: [default]\n",
-      "\t0 artifacts copied, 17 already retrieved (0kB/11ms)\n",
-      "22/10/25 08:22:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "    .appName(\"Spark NLP\")\\\n",
@@ -120,17 +52,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "NeutralFile = spark.read.parquet(\"../../Files/Submissions/score/done/Neutr_vacc_d.parquet\")\n",
     "ProFile = spark.read.parquet(\"../../Files/Submissions/score/done/Pro_vacc_d.parquet\")\n",
@@ -139,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,27 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train the pipeline\n",
-    "nlp_model = nlp_pipeline.fit(sample_n)"
+    "nlp_model = nlp_pipeline.fit(sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "# apply the pipeline to transform dataframe.\n",
-    "processed_df  = nlp_model.transform(sample_n)"
+    "processed_df  = nlp_model.transform(sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +189,7 @@
        "DataFrame[cleanText: string, score: bigint, subreddit: string, created_utc: bigint, class_II: bigint, document: array<struct<annotatorType:string,begin:int,end:int,result:string,metadata:map<string,string>,embeddings:array<float>>>, token: array<struct<annotatorType:string,begin:int,end:int,result:string,metadata:map<string,string>,embeddings:array<float>>>, normalized: array<struct<annotatorType:string,begin:int,end:int,result:string,metadata:map<string,string>,embeddings:array<float>>>, cleanTokens: array<struct<annotatorType:string,begin:int,end:int,result:string,metadata:map<string,string>,embeddings:array<float>>>, tokens: array<string>]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "236748"
+       "298255"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -319,23 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 935:=====================================================> (34 + 1) / 35]\r"
+      "[Stage 1833:====================================================> (52 + 1) / 53]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ANTI VACCINES, NUMBER OF TOPICS: 7\n",
-      "The lower bound on the log likelihood of the entire corpus: -11075370.045266483\n",
-      "The upper bound on perplexity: 6.484545368208278\n"
+      "ALL, NUMBER OF TOPICS: 22\n",
+      "The lower bound on the log likelihood of the entire corpus: -18170112.909964096\n",
+      "The upper bound on perplexity: 6.5659815286261995\n"
      ]
     },
     {
@@ -347,13 +271,13 @@
     }
    ],
    "source": [
-    "k=7\n",
+    "k=22\n",
     "lda = LDA(k=k, maxIter=10, optimizer='em')\n",
     "model = lda.fit(vectorized_tokens)\n",
     "ll = model.logLikelihood(vectorized_tokens)\n",
     "lp = model.logPerplexity(vectorized_tokens)\n",
     "\n",
-    "print( f\"ANTI VACCINES, NUMBER OF TOPICS: {k}\")\n",
+    "print( f\"ALL, NUMBER OF TOPICS: {k}\")\n",
     "print(\"The lower bound on the log likelihood of the entire corpus: \" + str(ll))\n",
     "\n",
     "print(\"The upper bound on perplexity: \" + str(lp))\n",
