--- a/analysis/topic_models.ipynb
+++ b/analysis/topic_models.ipynb
@@ -2357,7 +2357,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env')",
+   "display_name": "Python 3.9.12 ('reddit_env_test')",
    "language": "python",
    "name": "python3"
   },
@@ -2376,7 +2376,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7913a71c8e34b61ec22a3bd55dc7c3ae241fdb6cefe9aa5fb754c5121c0e8c4d"
+    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
    }
   }
  },
