plots for presentation

--- a/analysis/EDA_posts.ipynb
+++ b/analysis/EDA_posts.ipynb
@@ -16,11 +16,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.4.2'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../../Files/Submissions/score/done/author_db.csv')"
+    "df = pd.read_pickle('/Users/jakobschlierf/Downloads/ClassifierII_data.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>title</th>\n",
+       "      <th>score</th>\n",
+       "      <th>id</th>\n",
+       "      <th>author</th>\n",
+       "      <th>subreddit</th>\n",
+       "      <th>created_utc</th>\n",
+       "      <th>conf_II</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>class_II</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "      <td>421328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2363538</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "      <td>2364642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "      <td>196185</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          selftext    title    score       id   author  subreddit  \\\n",
+       "class_II                                                            \n",
+       "0           421328   421328   421328   421328   421328     421328   \n",
+       "1          2363538  2364642  2364642  2364642  2364642    2364642   \n",
+       "2           196185   196185   196185   196185   196185     196185   \n",
+       "\n",
+       "          created_utc  conf_II  \n",
+       "class_II                        \n",
+       "0              421328   421328  \n",
+       "1             2364642  2364642  \n",
+       "2              196185   196185  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(by='class_II').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('/Users/jakobschlierf/Downloads/ClassifierII_data.csv')"
    ]
   },
   {
